--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
             scroll-behavior: smooth;
         }
 
-        /* 顶部宇宙背景 */
-        .hero {
-            height: 100vh;
-            background: url("https://img-blog.csdnimg.cn/img_convert/509b4c7fcbdeb18f0bc33bd44a14bcbb.jpeg") no-repeat center center/cover;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            text-shadow: 0 2px 10px rgba(0,0,0,0.8);
-            position: relative;
-        }
+     /* 顶部宇宙背景（恢复原图 + 上银河 + 下地球） */
+.hero {
+    height: 100vh;
+    background: url("https://img-blog.csdnimg.cn/img_convert/509b4c7fcbdeb18f0bc33bd44a14bcbb.jpeg") no-repeat center center/cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-shadow: 0 2px 10px rgba(0,0,0,0.8);
+    position: relative;
+}
+
 
         /* 右上角汉堡菜单 */
         .menu-btn {
