Update hero background image in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      /* 顶部宇宙背景（恢复原图 + 上银河 + 下地球） */
 .hero {
     height: 100vh;
-    background: url("https://img-blog.csdnimg.cn/img_convert/509b4c7fcbdeb18f0bc33bd44a14bcbb.jpeg") no-repeat center center/cover;
+    background: url("https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?auto=format&fit=crop&w=1600&q=80") no-repeat center center/cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
