--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="close-btn" onclick="closeMenu()">×</div>
     <a href="#articles">最新文章</a>
     <a href="https://lightbonelife.blogspot.com/" target="_blank">全部文章（Blogger）</a>
-    <a href="#">随笔</a>
+    <a href="https://andrewwoooo.github.io/apps/macfocus.html">番茄时钟</a>
     <a href="#">城市观察</a>
     <a href="#">金融 · 思考</a>
 </div>
